headlamp_parity_tests/tests/parity_support/tests/snapshots/runner_parity/parity_suite_test__parity_support__runner_parity__coverage_thresholds_not_met_all_four.snap
---
source: headlamp_parity_tests/tests/parity_support/runner_parity.rs
expression: canonical
---
┌──────────────────────────────────────────────────┬────────┬──────────┬──────┬──────┬──────┬───────┬──────────────────┐
│[1mFile                                              [22m│[1mSection [22m│[1mWhere     [22m│[1mLines%[22m│[1mBar   [22m│[1mFuncs%[22m│[1mBranch%[22m│[1mDetail            [22m│
┼──────────────────────────────────────────────────┼────────┼──────────┼──────┼──────┼──────┼───────┼──────────────────┼
│src/a.<EXT>                                          │[1mSummary [22m│—         │[<N>;<N>;<N>;<N>;94m100.<PCT>%[0m│[<N>;<N>;<N>;<N>;94m██████[0m[90m[39m│[<N>;<N>;<N>;<N>;94m100.<PCT>%[0m│[<N>;<N>;<N>;<N>;94m    N/A[0m│                  │
│[2msrc/a.<EXT>                                          [22m│[2mTotals  [22m│[2m—         [22m│[2m100.<PCT>%[22m│[2m      [22m│[2m100.<PCT>%[22m│[2m    N/A[22m│                  │
└──────────────────────────────────────────────────┴────────┴──────────┴──────┴──────┴──────┴───────┴──────────────────┘
[90m────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m
------------------------------------|---------|----------|---------|---------|-------------------
File                                | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
------------------------------------|---------|----------|---------|---------|-------------------
[<N>;<N>;<N>;<N>;94mAll files                           [0m|[<N>;<N>;<N>;<N>;94m     <N> [0m|[<N>;<N>;<N>;<N>;94m      N/A [0m|[<N>;<N>;<N>;<N>;94m     <N> [0m|[<N>;<N>;<N>;<N>;94m     <N> [0m|[<N>;<N>;<N>;<N>;94m                   [0m
[<N>;<N>;<N>;<N>;94m a.<EXT>                               [0m|[<N>;<N>;<N>;<N>;94m     <N> [0m|[<N>;<N>;<N>;<N>;94m      N/A [0m|[<N>;<N>;<N>;<N>;94m     <N> [0m|[<N>;<N>;<N>;<N>;94m     <N> [0m|[<N>;<N>;<N>;<N>;94m                   [0m
[<N>;<N>;<N>;<N>;94m b.<EXT>                               [0m|[<N>;<N>;<N>;<N>;94m     <N> [0m|[<N>;<N>;<N>;<N>;94m      N/A [0m|[<N>;<N>;<N>;<N>;94m     <N> [0m|[<N>;<N>;<N>;<N>;94m     <N> [0m|[<N>;<N>;<N>;<N>;94m                   [0m
[<N>;<N>;<N>;<N>;94m index.<EXT>                           [0m|[<N>;<N>;<N>;<N>;94m     <N> [0m|[<N>;<N>;<N>;<N>;94m      N/A [0m|[<N>;<N>;<N>;<N>;94m     <N> [0m|[<N>;<N>;<N>;<N>;94m     <N> [0m|[<N>;<N>;<N>;<N>;94m                   [0m
[<N>;<N>;<N>;<N>;94m sum.<EXT>                             [0m|[<N>;<N>;<N>;<N>;94m     <N> [0m|[<N>;<N>;<N>;<N>;94m      N/A [0m|[<N>;<N>;<N>;<N>;94m     <N> [0m|[<N>;<N>;<N>;<N>;94m     <N> [0m|[<N>;<N>;<N>;<N>;94m                   [0m
[<N>;<N>;<N>;<N>;94m very_unique_name_for_parity_123.<EXT> [0m|[<N>;<N>;<N>;<N>;94m     <N> [0m|[<N>;<N>;<N>;<N>;94m      N/A [0m|[<N>;<N>;<N>;<N>;94m     <N> [0m|[<N>;<N>;<N>;<N>;94m     <N> [0m|[<N>;<N>;<N>;<N>;94m                   [0m
------------------------------------|---------|----------|---------|---------|-------------------

=============================== Coverage summary ===============================
[<N>;<N>;<N>;<N>;94mStatements[0m   : [<N>;<N>;<N>;<N>;94m100%[0m [<N>;<N>;<N>;<N>;94m( <N>/<N> )[0m
[<N>;<N>;<N>;<N>;94mBranches[0m     : [<N>;<N>;<N>;<N>;94mN/A[0m [<N>;<N>;<N>;<N>;35m( <N>/<N> )[0m
[<N>;<N>;<N>;<N>;94mFunctions[0m    : [<N>;<N>;<N>;<N>;94m100%[0m [<N>;<N>;<N>;<N>;94m( <N>/<N> )[0m
[<N>;<N>;<N>;<N>;94mLines[0m        : [<N>;<N>;<N>;<N>;94m100%[0m [<N>;<N>;<N>;<N>;94m( <N>/<N> )[0m
================================================================================

Coverage thresholds not met
 Branches: <PCT>% < <PCT>% (short <PCT>%)
 Functions: <PCT>% < <PCT>% (short <PCT>%)
 Lines: <PCT>% < <PCT>% (short <PCT>%)
