headlamp_parity_tests/tests/parity_support/tests/snapshots/runner_parity/parity_suite_test__parity_support__runner_parity__coverage_thresholds_not_met_all_runners.snap
---
source: headlamp_parity_tests/tests/parity_support/runner_parity.rs
expression: canonical
---
[<N>;<N>;<N>;<N>;246m[97m RUN [39m[0m [2m<ROOT>[22m

[35mtests/a_test.<EXT>[39m [2m(<N>)[22m
  [<N>;<N>;<N>;<N>;94m✓[0m [2mtest_a[22m

[<N>;<N>;<N>;<N>;94m[97m PASS [39m[0m [97mtests/a_test.<EXT>[39m
[35mtests/b_test.<EXT>[39m [2m(<N>)[22m
  [<N>;<N>;<N>;<N>;94m✓[0m [2mtest_b[22m

[<N>;<N>;<N>;<N>;94m[97m PASS [39m[0m [97mtests/b_test.<EXT>[39m
[35mtests/index_test.<EXT>[39m [2m(<N>)[22m
  [<N>;<N>;<N>;<N>;94m✓[0m [2mtest_indirect[22m

[<N>;<N>;<N>;<N>;94m[97m PASS [39m[0m [97mtests/index_test.<EXT>[39m
[35mtests/sum_fail_test.<EXT>[39m [2m(<N>)[22m
  [<N>;<N>;<N>;<N>;94m✓[0m [2mtest_sum_fails[22m

[<N>;<N>;<N>;<N>;94m[97m PASS [39m[0m [97mtests/sum_fail_test.<EXT>[39m
[35mtests/sum_pass_test.<EXT>[39m [2m(<N>)[22m
  [<N>;<N>;<N>;<N>;94m✓[0m [2mtest_sum_passes[22m

[<N>;<N>;<N>;<N>;94m[97m PASS [39m[0m [97mtests/sum_pass_test.<EXT>[39m
[2m───────────────────────────────────────────────────────────────────────────────────────────────────────[22m [<N>;<N>;<N>;<N>;35m[97m Failed Tests <N> [39m[0m

[1mTest Files[22m [<N>;<N>;<N>;<N>;94m5 passed[0m [2m(<N>)[22m
[1mTests[22m     [<N>;<N>;<N>;<N>;94m5 passed[0m [2m(<N>)[22m
[1mTime[22m      <DURATION>
┌──────────────────────────────────────────────────┬────────┬──────────┬──────┬──────┬──────┬───────┬──────────────────┐
│[1mFile                                              [22m│[1mSection [22m│[1mWhere     [22m│[1mLines%[22m│[1mBar   [22m│[1mFuncs%[22m│[1mBranch%[22m│[1mDetail            [22m│
┼──────────────────────────────────────────────────┼────────┼──────────┼──────┼──────┼──────┼───────┼──────────────────┼
│src/very_unique_name_for_parity_123.<EXT>            │[1mSummary [22m│—         │[<N>;<N>;<N>;<N>;94m100.<PCT>%[0m│[<N>;<N>;<N>;<N>;94m██████[0m[90m[39m│[<N>;<N>;<N>;<N>;94m100.<PCT>%[0m│[<N>;<N>;<N>;<N>;94m    N/A[0m│                  │
│[2msrc/very_unique_name_for_parity_123.<EXT>            [22m│[2mTotals  [22m│[2m—         [22m│[2m100.<PCT>%[22m│[2m      [22m│[2m100.<PCT>%[22m│[2m    N/A[22m│                  │
└──────────────────────────────────────────────────┴────────┴──────────┴──────┴──────┴──────┴───────┴──────────────────┘
[90m────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m
┌──────────────────────────────────────────────────┬────────┬──────────┬──────┬──────┬──────┬───────┬──────────────────┐
│[1mFile                                              [22m│[1mSection [22m│[1mWhere     [22m│[1mLines%[22m│[1mBar   [22m│[1mFuncs%[22m│[1mBranch%[22m│[1mDetail            [22m│
┼──────────────────────────────────────────────────┼────────┼──────────┼──────┼──────┼──────┼───────┼──────────────────┼
│src/sum.<EXT>                                        │[1mSummary [22m│—         │[<N>;<N>;<N>;<N>;94m100.<PCT>%[0m│[<N>;<N>;<N>;<N>;94m██████[0m[90m[39m│[<N>;<N>;<N>;<N>;94m100.<PCT>%[0m│[<N>;<N>;<N>;<N>;94m    N/A[0m│                  │
│[2msrc/sum.<EXT>                                        [22m│[2mTotals  [22m│[2m—         [22m│[2m100.<PCT>%[22m│[2m      [22m│[2m100.<PCT>%[22m│[2m    N/A[22m│                  │
└──────────────────────────────────────────────────┴────────┴──────────┴──────┴──────┴──────┴───────┴──────────────────┘
[90m────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m
┌──────────────────────────────────────────────────┬────────┬──────────┬──────┬──────┬──────┬───────┬──────────────────┐
│[1mFile                                              [22m│[1mSection [22m│[1mWhere     [22m│[1mLines%[22m│[1mBar   [22m│[1mFuncs%[22m│[1mBranch%[22m│[1mDetail            [22m│
┼──────────────────────────────────────────────────┼────────┼──────────┼──────┼──────┼──────┼───────┼──────────────────┼
│src/index.<EXT>                                      │[1mSummary [22m│—         │[<N>;<N>;<N>;<N>;94m100.<PCT>%[0m│[<N>;<N>;<N>;<N>;94m██████[0m[90m[39m│[<N>;<N>;<N>;<N>;94m100.<PCT>%[0m│[<N>;<N>;<N>;<N>;94m    N/A[0m│                  │
│[2msrc/index.<EXT>                                      [22m│[2mTotals  [22m│[2m—         [22m│[2m100.<PCT>%[22m│[2m      [22m│[2m100.<PCT>%[22m│[2m    N/A[22m│                  │
└──────────────────────────────────────────────────┴────────┴──────────┴──────┴──────┴──────┴───────┴──────────────────┘
[90m────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m
┌──────────────────────────────────────────────────┬────────┬──────────┬──────┬──────┬──────┬───────┬──────────────────┐
│[1mFile                                              [22m│[1mSection [22m│[1mWhere     [22m│[1mLines%[22m│[1mBar   [22m│[1mFuncs%[22m│[1mBranch%[22m│[1mDetail            [22m│
┼──────────────────────────────────────────────────┼────────┼──────────┼──────┼──────┼──────┼───────┼──────────────────┼
│src/b.<EXT>                                          │[1mSummary [22m│—         │[<N>;<N>;<N>;<N>;94m100.<PCT>%[0m│[<N>;<N>;<N>;<N>;94m██████[0m[90m[39m│[<N>;<N>;<N>;<N>;94m100.<PCT>%[0m│[<N>;<N>;<N>;<N>;94m    N/A[0m│                  │
│[2msrc/b.<EXT>                                          [22m│[2mTotals  [22m│[2m—         [22m│[2m100.<PCT>%[22m│[2m      [22m│[2m100.<PCT>%[22m│[2m    N/A[22m│                  │
└──────────────────────────────────────────────────┴────────┴──────────┴──────┴──────┴──────┴───────┴──────────────────┘
[90m────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m
┌──────────────────────────────────────────────────┬────────┬──────────┬──────┬──────┬──────┬───────┬──────────────────┐
│[1mFile                                              [22m│[1mSection [22m│[1mWhere     [22m│[1mLines%[22m│[1mBar   [22m│[1mFuncs%[22m│[1mBranch%[22m│[1mDetail            [22m│
┼──────────────────────────────────────────────────┼────────┼──────────┼──────┼──────┼──────┼───────┼──────────────────┼
│src/a.<EXT>                                          │[1mSummary [22m│—         │[<N>;<N>;<N>;<N>;94m100.<PCT>%[0m│[<N>;<N>;<N>;<N>;94m██████[0m[90m[39m│[<N>;<N>;<N>;<N>;94m100.<PCT>%[0m│[<N>;<N>;<N>;<N>;94m    N/A[0m│                  │
│[2msrc/a.<EXT>                                          [22m│[2mTotals  [22m│[2m—         [22m│[2m100.<PCT>%[22m│[2m      [22m│[2m100.<PCT>%[22m│[2m    N/A[22m│                  │
└──────────────────────────────────────────────────┴────────┴──────────┴──────┴──────┴──────┴───────┴──────────────────┘
[90m────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m
----------------------------------------|---------|----------|---------|---------|-------------------
File                                    | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
----------------------------------------|---------|----------|---------|---------|-------------------
[<N>;<N>;<N>;<N>;94mAll files                               [0m|[<N>;<N>;<N>;<N>;94m     <N> [0m|[<N>;<N>;<N>;<N>;94m      N/A [0m|[<N>;<N>;<N>;<N>;94m     <N> [0m|[<N>;<N>;<N>;<N>;94m     <N> [0m|[<N>;<N>;<N>;<N>;94m                   [0m
[<N>;<N>;<N>;<N>;94m src/a.<EXT>                               [0m|[<N>;<N>;<N>;<N>;94m     <N> [0m|[<N>;<N>;<N>;<N>;94m      N/A [0m|[<N>;<N>;<N>;<N>;94m     <N> [0m|[<N>;<N>;<N>;<N>;94m     <N> [0m|[<N>;<N>;<N>;<N>;94m                   [0m
[<N>;<N>;<N>;<N>;94m src/b.<EXT>                               [0m|[<N>;<N>;<N>;<N>;94m     <N> [0m|[<N>;<N>;<N>;<N>;94m      N/A [0m|[<N>;<N>;<N>;<N>;94m     <N> [0m|[<N>;<N>;<N>;<N>;94m     <N> [0m|[<N>;<N>;<N>;<N>;94m                   [0m
[<N>;<N>;<N>;<N>;94m src/index.<EXT>                           [0m|[<N>;<N>;<N>;<N>;94m     <N> [0m|[<N>;<N>;<N>;<N>;94m      N/A [0m|[<N>;<N>;<N>;<N>;94m     <N> [0m|[<N>;<N>;<N>;<N>;94m     <N> [0m|[<N>;<N>;<N>;<N>;94m                   [0m
[<N>;<N>;<N>;<N>;94m src/sum.<EXT>                             [0m|[<N>;<N>;<N>;<N>;94m     <N> [0m|[<N>;<N>;<N>;<N>;94m      N/A [0m|[<N>;<N>;<N>;<N>;94m     <N> [0m|[<N>;<N>;<N>;<N>;94m     <N> [0m|[<N>;<N>;<N>;<N>;94m                   [0m
[<N>;<N>;<N>;<N>;94m src/very_unique_name_for_parity_123.<EXT> [0m|[<N>;<N>;<N>;<N>;94m     <N> [0m|[<N>;<N>;<N>;<N>;94m      N/A [0m|[<N>;<N>;<N>;<N>;94m     <N> [0m|[<N>;<N>;<N>;<N>;94m     <N> [0m|[<N>;<N>;<N>;<N>;94m                   [0m
----------------------------------------|---------|----------|---------|---------|-------------------

=============================== Coverage summary ===============================
[<N>;<N>;<N>;<N>;94mStatements[0m   : [<N>;<N>;<N>;<N>;94m100%[0m [<N>;<N>;<N>;<N>;94m( <N>/<N> )[0m
[<N>;<N>;<N>;<N>;94mBranches[0m     : [<N>;<N>;<N>;<N>;94mN/A[0m [<N>;<N>;<N>;<N>;35m( <N>/<N> )[0m
[<N>;<N>;<N>;<N>;94mFunctions[0m    : [<N>;<N>;<N>;<N>;94m100%[0m [<N>;<N>;<N>;<N>;94m( <N>/<N> )[0m
[<N>;<N>;<N>;<N>;94mLines[0m        : [<N>;<N>;<N>;<N>;94m100%[0m [<N>;<N>;<N>;<N>;94m( <N>/<N> )[0m
================================================================================

Coverage thresholds not met
 Branches: <PCT>% < <PCT>% (short <PCT>%)
 Functions: <PCT>% < <PCT>% (short <PCT>%)
 Lines: <PCT>% < <PCT>% (short <PCT>%)
